created 25 and 100 sample dataset

--- a/Assignment3/yd1530_HW3.ipynb
+++ b/Assignment3/yd1530_HW3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9441cbf7",
+   "id": "d92905f7",
    "metadata": {},
    "source": [
     "Q1: Create the following training datasets from the optdigits.tra set: \n",
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "70b55549",
+   "execution_count": 99,
+   "id": "e05c371e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "2429cf06",
+   "execution_count": 100,
+   "id": "c89ca20f",
    "metadata": {},
    "outputs": [
     {
@@ -56,36 +56,36 @@
        "      <th></th>\n",
        "      <th>0</th>\n",
        "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "      <th>6</th>\n",
-       "      <th>15</th>\n",
-       "      <th>12</th>\n",
-       "      <th>1.1</th>\n",
-       "      <th>0.1</th>\n",
-       "      <th>0.2</th>\n",
-       "      <th>0.3</th>\n",
        "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
        "      <th>...</th>\n",
-       "      <th>0.21</th>\n",
-       "      <th>0.22</th>\n",
-       "      <th>0.23</th>\n",
-       "      <th>6.3</th>\n",
-       "      <th>14.1</th>\n",
-       "      <th>7.4</th>\n",
-       "      <th>1.3</th>\n",
-       "      <th>0.24</th>\n",
-       "      <th>0.25</th>\n",
-       "      <th>0.26</th>\n",
+       "      <th>55</th>\n",
+       "      <th>56</th>\n",
+       "      <th>57</th>\n",
+       "      <th>58</th>\n",
+       "      <th>59</th>\n",
+       "      <th>60</th>\n",
+       "      <th>61</th>\n",
+       "      <th>62</th>\n",
+       "      <th>63</th>\n",
+       "      <th>64</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>16</td>\n",
+       "      <td>1</td>\n",
        "      <td>6</td>\n",
-       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -94,10 +94,10 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>16</td>\n",
-       "      <td>15</td>\n",
-       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>14</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -106,6 +106,30 @@
        "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>16</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>16</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>8</td>\n",
        "      <td>15</td>\n",
        "      <td>16</td>\n",
@@ -127,7 +151,7 @@
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -151,7 +175,7 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>5</td>\n",
@@ -173,30 +197,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>16</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>16</td>\n",
-       "      <td>16</td>\n",
-       "      <td>16</td>\n",
-       "      <td>16</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -223,7 +223,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3817</th>\n",
+       "      <th>3818</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>5</td>\n",
@@ -247,7 +247,7 @@
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3818</th>\n",
+       "      <th>3819</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -271,7 +271,7 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3819</th>\n",
+       "      <th>3820</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
@@ -295,7 +295,7 @@
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3820</th>\n",
+       "      <th>3821</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>6</td>\n",
@@ -319,7 +319,7 @@
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3821</th>\n",
+       "      <th>3822</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
@@ -344,124 +344,93 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3822 rows × 65 columns</p>\n",
+       "<p>3823 rows × 65 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      0  1   6  15  12  1.1  0.1  0.2  0.3  7  ...  0.21  0.22  0.23  6.3  \\\n",
-       "0     0  0  10  16   6    0    0    0    0  7  ...     0     0     0   10   \n",
-       "1     0  0   8  15  16   13    0    0    0  1  ...     0     0     0    9   \n",
-       "2     0  0   0   3  11   16    0    0    0  0  ...     0     0     0    0   \n",
-       "3     0  0   5  14   4    0    0    0    0  0  ...     0     0     0    4   \n",
-       "4     0  0  11  16  10    1    0    0    0  4  ...     3     0     0   10   \n",
-       "...  .. ..  ..  ..  ..  ...  ...  ...  ... ..  ...   ...   ...   ...  ...   \n",
-       "3817  0  0   5  13  11    2    0    0    0  2  ...     0     0     0    8   \n",
-       "3818  0  0   0   1  12    1    0    0    0  0  ...     0     0     0    0   \n",
-       "3819  0  0   3  15   0    0    0    0    0  0  ...     0     0     0    4   \n",
-       "3820  0  0   6  16   2    0    0    0    0  0  ...     0     0     0    5   \n",
-       "3821  0  0   2  15  16   13    1    0    0  0  ...     0     0     0    4   \n",
+       "      0   1   2   3   4   5   6   7   8   9   ...  55  56  57  58  59  60  61  \\\n",
+       "0      0   1   6  15  12   1   0   0   0   7  ...   0   0   0   6  14   7   1   \n",
+       "1      0   0  10  16   6   0   0   0   0   7  ...   0   0   0  10  16  15   3   \n",
+       "2      0   0   8  15  16  13   0   0   0   1  ...   0   0   0   9  14   0   0   \n",
+       "3      0   0   0   3  11  16   0   0   0   0  ...   0   0   0   0   1  15   2   \n",
+       "4      0   0   5  14   4   0   0   0   0   0  ...   0   0   0   4  12  14   7   \n",
+       "...   ..  ..  ..  ..  ..  ..  ..  ..  ..  ..  ...  ..  ..  ..  ..  ..  ..  ..   \n",
+       "3818   0   0   5  13  11   2   0   0   0   2  ...   0   0   0   8  13  15  10   \n",
+       "3819   0   0   0   1  12   1   0   0   0   0  ...   0   0   0   0   4   9   0   \n",
+       "3820   0   0   3  15   0   0   0   0   0   0  ...   0   0   0   4  14  16   9   \n",
+       "3821   0   0   6  16   2   0   0   0   0   0  ...   0   0   0   5  16  16  16   \n",
+       "3822   0   0   2  15  16  13   1   0   0   0  ...   0   0   0   4  14   1   0   \n",
        "\n",
-       "      14.1  7.4  1.3  0.24  0.25  0.26  \n",
-       "0       16   15    3     0     0     0  \n",
-       "1       14    0    0     0     0     7  \n",
-       "2        1   15    2     0     0     4  \n",
-       "3       12   14    7     0     0     6  \n",
-       "4       16   16   16    16     6     2  \n",
-       "...    ...  ...  ...   ...   ...   ...  \n",
-       "3817    13   15   10     1     0     9  \n",
-       "3818     4    9    0     0     0     4  \n",
-       "3819    14   16    9     0     0     6  \n",
-       "3820    16   16   16     5     0     6  \n",
-       "3821    14    1    0     0     0     7  \n",
+       "      62  63  64  \n",
+       "0      0   0   0  \n",
+       "1      0   0   0  \n",
+       "2      0   0   7  \n",
+       "3      0   0   4  \n",
+       "4      0   0   6  \n",
+       "...   ..  ..  ..  \n",
+       "3818   1   0   9  \n",
+       "3819   0   0   4  \n",
+       "3820   0   0   6  \n",
+       "3821   5   0   6  \n",
+       "3822   0   0   7  \n",
        "\n",
-       "[3822 rows x 65 columns]"
+       "[3823 rows x 65 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# setting header = None here to get the column names as in order starting from 0\n",
     "\n",
-    "train_data = pd.read_csv('/media/anuja/study/Anuja/MS/githubLibraries/MLprojects/Assignment3/optdigits.tra', sep=\",\")\n",
+    "train_data = (pd.read_csv('/media/anuja/study/Anuja/MS/githubLibraries/MLprojects/Assignment3/optdigits.tra',\n",
+    "                         sep=\",\", header = None))\n",
     "train_data"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 101,
+   "id": "cafd22a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create dataset of 25 instances of each class and 100 instances of each class\n",
+    "\n",
+    "classes = 10\n",
+    "X25_train = train_data[train_data[64] == 0].sample(25)\n",
+    "X100_train = train_data[train_data[64] == 0].sample(100)\n",
+    "#print(X25_train)\n",
+    "# print(X100_train)\n",
+    "for i in range(1,classes,1):\n",
+    "\n",
+    "    X25_train = X25_train.append(train_data[train_data[64] == i].sample(25), ignore_index = True)\n",
+    "    X100_train = X100_train.append(train_data[train_data[64] == i].sample(100), ignore_index= True)\n",
+    "\n",
+    "# with pd.option_context('display.max_rows', None, 'display.max_columns', None):  # more options can\n",
+    "# be specified also\n",
+    "#     display(X25_train)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0545e96",
+   "metadata": {},
+   "source": [
+    "Q4: Multilayer Perceptrons: classification \n",
+    "Use library sklearn.neural_network.MLPClassifier. \n",
+    "For the neural network (MLP) determine the value of the best hidden_layer_sizes (experiment with 1 and 2 hidden layers and 2, 5, 10 hidden units in each layer) that results in the best test error for each of the training data sets you created. "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "11986395",
+   "id": "3f4c6254",
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "c1d81bb6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(375, 65)\n",
-      "(389, 65)\n",
-      "(380, 65)\n",
-      "(389, 65)\n",
-      "(387, 65)\n",
-      "(376, 65)\n",
-      "(377, 65)\n",
-      "(387, 65)\n",
-      "(380, 65)\n",
-      "(382, 65)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# first get the all instances of each class and store them \n",
-    "train_array = np.asarray(train_data)    \n",
-    "    \n",
-    "class0_all_train = train_array[train_array[:,64] == 0, :]\n",
-    "class1_all_train = train_array[train_array[:,64] == 1, :]\n",
-    "class2_all_train = train_array[train_array[:,64] == 2, :]\n",
-    "class3_all_train = train_array[train_array[:,64] == 3, :]\n",
-    "class4_all_train = train_array[train_array[:,64] == 4, :]\n",
-    "class5_all_train = train_array[train_array[:,64] == 5, :]\n",
-    "class6_all_train = train_array[train_array[:,64] == 6, :]\n",
-    "class7_all_train = train_array[train_array[:,64] == 7, :]\n",
-    "class8_all_train = train_array[train_array[:,64] == 8, :]\n",
-    "class9_all_train = train_array[train_array[:,64] == 9, :]\n",
-    "\n",
-    "print(class0_all_train.shape)\n",
-    "print(class1_all_train.shape)\n",
-    "print(class2_all_train.shape)\n",
-    "print(class3_all_train.shape)\n",
-    "print(class4_all_train.shape)\n",
-    "print(class5_all_train.shape)\n",
-    "print(class6_all_train.shape)\n",
-    "print(class7_all_train.shape)\n",
-    "print(class8_all_train.shape)\n",
-    "print(class9_all_train.shape)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d3167d8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# now get 25 instances of each class and store them\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
   }
  ],
  "metadata": {
