--- a/Assignment3/kt6301_HW3.ipynb
+++ b/Assignment3/kt6301_HW3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5d9fffdf",
+   "id": "f37fc031",
    "metadata": {},
    "source": [
     "1.Import relevant commands for numpy, pandas, sklearn."
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "63571f49",
+   "id": "c122fef0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c7bbbc2",
+   "id": "f6c3274a",
    "metadata": {},
    "source": [
     "Q1: Create the following training datasets from the optdigits.tra set: \n",
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "02b20a21",
+   "id": "d9abb098",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad276b38",
+   "id": "415b9b42",
    "metadata": {},
    "source": [
     "Q2: Decision Trees, classification: \n",
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "79dcbb39",
+   "id": "4b5ce9d5",
    "metadata": {},
    "outputs": [
     {
@@ -175,6 +175,7 @@
     "\n",
     "TrainingError_100 = []\n",
     "TestingError_100=[]\n",
+    "index=[]\n",
     "\n",
     "#storing the max_depth parameters in a list\n",
     "mdepth=[2,3,5,10]\n",
@@ -198,6 +199,8 @@
     "        a2=model.score(Xtest,ytest)\n",
     "        TrainingError_100.append(1-a1)\n",
     "        TestingError_100.append(1-a2)\n",
+    "        temp = 'Max_Depth = '+str(i)\n",
+    "        \n",
     "\n",
     "columns = ['Training Error','Test Error']\n",
     "\n",
@@ -220,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c1a535f",
+   "id": "18d9144b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -228,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b5e3022",
+   "id": "5a12f950",
    "metadata": {},
    "outputs": [],
    "source": []
