--- a/Assignment3/kt6301_HW3.ipynb
+++ b/Assignment3/kt6301_HW3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f37fc031",
+   "id": "9a2f66eb",
    "metadata": {},
    "source": [
     "1.Import relevant commands for numpy, pandas, sklearn."
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "c122fef0",
+   "execution_count": 87,
+   "id": "fcb28229",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6c3274a",
+   "id": "fba65ad6",
    "metadata": {},
    "source": [
     "Q1: Create the following training datasets from the optdigits.tra set: \n",
@@ -38,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "d9abb098",
+   "execution_count": 88,
+   "id": "4425962a",
    "metadata": {},
    "outputs": [
     {
@@ -47,57 +47,57 @@
      "output_type": "stream",
      "text": [
       "      0   1   2   3   4   5   6   7   8   9   ...  55  56  57  58  59  60  61  \\\n",
-      "3716   0   0   0   6  11   1   0   0   0   0  ...   0   0   0   0   4   9  14   \n",
-      "2338   0   0   8  14  13   3   0   0   0   6  ...   0   0   0   9  16  13  12   \n",
-      "1473   0   0   0   9  12   0   0   0   0   0  ...   0   0   0   0   9  15  10   \n",
-      "3560   0   0   0  12  11   0   0   0   0   0  ...   2   0   0   0  11  16  16   \n",
-      "1207   0   0   2  11  15   8   0   0   0   0  ...   0   0   0   2  10  14  16   \n",
+      "2062   0   0   3  11  14  16   4   0   0   9  ...   0   0   0   2  15  16  15   \n",
+      "1546   0   0   2  15   8   0   0   0   0   0  ...   0   0   0   3  14  15   9   \n",
+      "1691   0   0   0   2  14  10   0   0   0   0  ...   0   0   0   0   2  11  14   \n",
+      "2153   0   0   4  14  16  15   1   0   0   0  ...   0   0   0   7  14   2   0   \n",
+      "32     0   0   9  16  16  15   2   0   0   0  ...   0   0   0   8  13   1   0   \n",
       "...   ..  ..  ..  ..  ..  ..  ..  ..  ..  ..  ...  ..  ..  ..  ..  ..  ..  ..   \n",
-      "3247   0   0   4  13  13   2   0   0   0   2  ...   0   0   0   3  13  16  16   \n",
-      "3124   0   0   4  16  13   0   0   0   0   0  ...   0   0   0   2  16  16  13   \n",
-      "2101   0   0   6  15  15   4   0   0   0   4  ...   0   0   0   5  15   6   0   \n",
-      "581    0   0  11  15   7   0   0   0   0   2  ...   0   0   1  10  12  14  10   \n",
-      "209    0   0   0   3  11  16  11   0   0   0  ...   0   0   0   0   2  16   5   \n",
+      "3099   0   0  10  15   9   1   0   0   0   5  ...   0   0   0  10  12  12  15   \n",
+      "2725   0   0   2   7  13  12   2   0   0   0  ...   0   0   0   0   9   8   0   \n",
+      "2229   0   0   9  14   9   0   0   0   0   6  ...   0   0   0   6  10  14  16   \n",
+      "305    0   0   0   6  10  14   6   0   0   0  ...   0   0   0   0   9  11   0   \n",
+      "214    0   0   0   1   8  15  12   0   0   0  ...   0   0   0   0   0  11   1   \n",
       "\n",
       "      62  63  64  \n",
-      "3716  13   0   6  \n",
-      "2338   1   0   3  \n",
-      "1473   0   0   6  \n",
-      "3560  15   1   6  \n",
-      "1207   7   0   5  \n",
+      "2062   0   0   5  \n",
+      "1546   0   0   0  \n",
+      "1691   0   0   1  \n",
+      "2153   0   0   7  \n",
+      "32     0   0   7  \n",
       "...   ..  ..  ..  \n",
-      "3247   8   0   9  \n",
-      "3124   1   0   9  \n",
-      "2101   0   0   9  \n",
-      "581    1   0   9  \n",
-      "209    0   0   9  \n",
+      "3099  11   0   9  \n",
+      "2725   0   0   9  \n",
+      "2229   5   0   9  \n",
+      "305    0   0   9  \n",
+      "214    0   0   9  \n",
       "\n",
       "[250 rows x 65 columns]\n",
       "      0   1   2   3   4   5   6   7   8   9   ...  55  56  57  58  59  60  61  \\\n",
-      "456    0   0   0   2  16  15   3   0   0   0  ...   0   0   0   0   0  13  16   \n",
-      "78     0   0  10  12  10   0   0   0   0   3  ...   0   0   0   7  12  13  12   \n",
-      "1333   0   0   9  16  16  16   7   0   0   3  ...   0   0   0  10  16  16   4   \n",
-      "1522   0   0   0   1  10  16   8   0   0   1  ...   0   0   0   0   0  10  16   \n",
-      "989    0   0   0   6  14   3   0   0   0   0  ...   2   0   0   0   4  14  16   \n",
+      "1392   0   0   6  12  15   9   1   0   0   5  ...   0   0   0   5  14  15   4   \n",
+      "186    0   0   0   1  11  14   5   0   0   0  ...   0   0   0   0   0  11  10   \n",
+      "992    0   0   2  15  16   9   0   0   0   0  ...   0   0   0   3  15  16  10   \n",
+      "995    0   0   4  15  14  12  11   0   0   0  ...   0   0   0   5  15   2   0   \n",
+      "1189   0   1   7  14  16  12   1   0   0   7  ...   0   0   0   6  16  15   3   \n",
       "...   ..  ..  ..  ..  ..  ..  ..  ..  ..  ..  ...  ..  ..  ..  ..  ..  ..  ..   \n",
-      "3067   0   0   4  15  12   3   0   0   0   3  ...   0   0   0   6  15   5   0   \n",
-      "1851   0   0   0   7  16  11   0   0   0   0  ...   0   0   0   0   8  16   1   \n",
-      "2616   0   0   0  10  13   5   0   0   0   0  ...   0   0   0   0  11   5   0   \n",
-      "2604   0   0   0   8  16  13   1   0   0   0  ...   0   0   0   0  11  10   0   \n",
-      "1983   0   0   1   9  16  13   1   0   0   0  ...   0   0   0   1  15   3   0   \n",
+      "2576   0   0   7  13  16  11   4   0   0   1  ...   0   0   0  12   6   0   0   \n",
+      "652    0   0   3   9   8   0   0   0   0   2  ...   0   0   0   9  16  13   9   \n",
+      "304    0   0   4  15  13   0   0   0   0   1  ...   0   0   0   3  15  14   7   \n",
+      "3431   0   0   8  15  13   8   0   0   0   1  ...   0   0   0   7  14  12   3   \n",
+      "1956   0   0   0   2  12  13   8   1   0   0  ...   0   0   0   0   0  14   1   \n",
       "\n",
       "      62  63  64  \n",
-      "456    7   0   1  \n",
-      "78     4   0   0  \n",
-      "1333   0   0   5  \n",
-      "1522   7   0   1  \n",
-      "989   13   0   6  \n",
+      "1392   0   0   9  \n",
+      "186    0   0   1  \n",
+      "992    0   0   3  \n",
+      "995    0   0   7  \n",
+      "1189   0   0   5  \n",
       "...   ..  ..  ..  \n",
-      "3067   0   0   9  \n",
-      "1851   0   0   9  \n",
-      "2616   0   0   9  \n",
-      "2604   0   0   9  \n",
-      "1983   0   0   9  \n",
+      "2576   0   0   9  \n",
+      "652    1   0   9  \n",
+      "304    1   0   9  \n",
+      "3431   0   0   9  \n",
+      "1956   0   0   9  \n",
       "\n",
       "[1000 rows x 65 columns]\n"
      ]
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "415b9b42",
+   "id": "a53b51f4",
    "metadata": {},
    "source": [
     "Q2: Decision Trees, classification: \n",
@@ -144,8 +144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "4b5ce9d5",
+   "execution_count": 89,
+   "id": "1a028ac9",
    "metadata": {},
    "outputs": [
     {
@@ -153,17 +153,18 @@
      "output_type": "stream",
      "text": [
       "Results with 25 instances\n",
-      "   Training Error  Test Error\n",
-      "0           0.528    0.596550\n",
-      "1           0.312    0.398442\n",
-      "2           0.000    0.002782\n",
-      "3           0.000    0.000000\n",
+      "                Training Error  Test Error\n",
+      "Max_Depth = 2            0.632    0.698943\n",
+      "Max_Depth = 3            0.420    0.501391\n",
+      "Max_Depth = 5            0.112    0.197551\n",
+      "Max_Depth = 10           0.000    0.031163\n",
+      "\n",
       "Results with 100 instances\n",
-      "   Training Error  Test Error\n",
-      "0           0.548    0.599332\n",
-      "1           0.329    0.399555\n",
-      "2           0.000    0.000000\n",
-      "3           0.000    0.000000\n"
+      "                Training Error  Test Error\n",
+      "Max_Depth = 2            0.663    0.698386\n",
+      "Max_Depth = 3            0.445    0.497496\n",
+      "Max_Depth = 5            0.118    0.197551\n",
+      "Max_Depth = 10           0.000    0.002782\n"
      ]
     }
    ],
@@ -200,7 +201,7 @@
     "        TrainingError_100.append(1-a1)\n",
     "        TestingError_100.append(1-a2)\n",
     "        temp = 'Max_Depth = '+str(i)\n",
-    "        \n",
+    "        index.append(temp)\n",
     "\n",
     "columns = ['Training Error','Test Error']\n",
     "\n",
@@ -211,11 +212,12 @@
     "    Error_list_100.append([TrainingError_100[i],TestingError_100[i]] )\n",
     "    \n",
     "print(\"Results with 25 instances\")   \n",
-    "df_train_error_25 = pd.DataFrame(Error_list_25,columns=columns)\n",
+    "df_train_error_25 = pd.DataFrame(Error_list_25,columns=columns,index=index)\n",
     "print(df_train_error_25.head(20)) \n",
     "\n",
+    "print()\n",
     "print(\"Results with 100 instances\")   \n",
-    "df_train_error_100 = pd.DataFrame(Error_list_100,columns=columns)\n",
+    "df_train_error_100 = pd.DataFrame(Error_list_100,columns=columns,index=index)\n",
     "print(df_train_error_100.head(20))\n",
     "\n"
    ]
@@ -223,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18d9144b",
+   "id": "f5cd8e84",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -231,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a12f950",
+   "id": "269cf28e",
    "metadata": {},
    "outputs": [],
    "source": []
