--- a/Assignment3/kt6301_HW3.ipynb
+++ b/Assignment3/kt6301_HW3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "84fa8386",
+   "id": "025c1061",
    "metadata": {},
    "source": [
     "1.Import relevant commands for numpy, pandas, sklearn."
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "b0a38302",
+   "id": "eab4009e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9af3223e",
+   "id": "006d5f11",
    "metadata": {},
    "source": [
     "Q1: Create the following training datasets from the optdigits.tra set: \n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "908927ee",
+   "id": "217d21c9",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dee04f4",
+   "id": "68c4d25d",
    "metadata": {},
    "source": [
     "Q2: Decision Trees, classification: \n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "e421143b",
+   "id": "8a25b964",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "308b8ec0",
+   "id": "d2737364",
    "metadata": {},
    "outputs": [
     {
@@ -253,9 +253,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d8af32ac",
+   "metadata": {},
+   "source": [
+    "Q2:Repeat Q1 using XGBoost and LightGBM algorithms. Experiment with at least 5 different parameter settings to see their effect on training and test errors. How do best parameters change as the #training instances change? "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "168b03c3",
+   "id": "86e0732e",
    "metadata": {},
    "outputs": [],
    "source": []
