--- a/yd1530_HW2.ipynb
+++ b/yd1530_HW2.ipynb
@@ -428,7 +428,7 @@
     "[train_rows, train_col] = train_array.shape\n",
     "\n",
     "# now convert split the arrays into two parts as we have two classes here\n",
-    "train_class6 = train_array[train_array[:,64] == 6, :]\n",
+    "train_class6 = train_array[train_array  == 6, :]\n",
     "print(train_class6)\n",
     "\n",
     "train_class9 = train_array[train_array[:,64] == 9, :]\n",
