--- a/Assignment3/yd1530_HW3.ipynb
+++ b/Assignment3/yd1530_HW3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5dd135e8",
+   "id": "323e1aa0",
    "metadata": {},
    "source": [
     "Q1: Create the following training datasets from the optdigits.tra set: \n",
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
-   "id": "8b10f18b",
+   "execution_count": 7,
+   "id": "3c9e1a1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
-   "id": "a6a2d79f",
+   "execution_count": 8,
+   "id": "9dc16f4d",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "[3823 rows x 65 columns]"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,8 +392,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
-   "id": "ac910925",
+   "execution_count": 9,
+   "id": "9bcaf38e",
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
        "[1797 rows x 65 columns]"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,8 +754,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
-   "id": "6b5e872f",
+   "execution_count": 10,
+   "id": "79ad7026",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e70ad0a6",
+   "id": "31e8508b",
    "metadata": {},
    "source": [
     "Q4: Multilayer Perceptrons: classification \n",
@@ -788,8 +788,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
-   "id": "6f9251b9",
+   "execution_count": 11,
+   "id": "8d3b63f8",
    "metadata": {},
    "outputs": [
     {
@@ -825,85 +825,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
-   "id": "e654fba6",
+   "execution_count": 15,
+   "id": "6bcbd35c",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/anuja/anaconda3/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py:500: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "  self.n_iter_ = _check_optimize_result(\"lbfgs\", opt_res, self.max_iter)\n",
-      "/home/anuja/anaconda3/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py:500: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "  self.n_iter_ = _check_optimize_result(\"lbfgs\", opt_res, self.max_iter)\n",
-      "/home/anuja/anaconda3/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py:500: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "  self.n_iter_ = _check_optimize_result(\"lbfgs\", opt_res, self.max_iter)\n",
-      "/home/anuja/anaconda3/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py:500: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "  self.n_iter_ = _check_optimize_result(\"lbfgs\", opt_res, self.max_iter)\n",
-      "/home/anuja/anaconda3/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py:500: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "  self.n_iter_ = _check_optimize_result(\"lbfgs\", opt_res, self.max_iter)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--------Printing results of 25 samples with layer 1-----------\n",
+      "-----Printing results of 25 samples using Multilayer Perceptrons with 1 layer-----\n",
       "                   Training Error  Testing Error\n",
-      "Hidden Units = 2            0.660       0.773511\n",
-      "Hidden Units = 5            0.668       0.739009\n",
-      "Hidden Units = 10           0.900       0.899277\n",
+      "Hidden Units = 2            0.604       0.716750\n",
+      "Hidden Units = 5            0.660       0.757930\n",
+      "Hidden Units = 10           0.692       0.752922\n",
       "\n",
-      "--------Printing results of 100 samples with layer 1----------\n",
+      "-----Printing results of 100 samples using Multilayer Perceptrons with 1 layer-----\n",
       "                   Training Error  Testing Error\n",
-      "Hidden Units = 2             0.66       0.707290\n",
-      "Hidden Units = 5             0.90       0.900946\n",
-      "Hidden Units = 10            0.90       0.899277\n",
+      "Hidden Units = 2            0.737       0.762938\n",
+      "Hidden Units = 5            0.618       0.687257\n",
+      "Hidden Units = 10           0.679       0.722315\n",
       "\n",
-      "--------Printing results of 25 samples with layer 2-----------\n",
+      "-----Printing results of 25 samples using Multilayer Perceptrons with 2 layers-----\n",
       "                   Training Error  Testing Error\n",
-      "Hidden Units = 2            0.900       0.898720\n",
-      "Hidden Units = 5            0.660       0.702282\n",
-      "Hidden Units = 10           0.664       0.720089\n",
+      "Hidden Units = 2            0.548       0.678353\n",
+      "Hidden Units = 5            0.340       0.508625\n",
+      "Hidden Units = 10           0.380       0.559822\n",
       "\n",
-      "--------Printing results of 100 samples with layer 2----------\n",
+      "-----Printing results of 100 samples using Multilayer Perceptrons with 2 layers-----\n",
       "                   Training Error  Testing Error\n",
-      "Hidden Units = 2            0.900       0.900390\n",
-      "Hidden Units = 5            0.402       0.439622\n",
-      "Hidden Units = 10           0.663       0.706177\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/anuja/anaconda3/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py:500: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "  self.n_iter_ = _check_optimize_result(\"lbfgs\", opt_res, self.max_iter)\n"
+      "Hidden Units = 2            0.662       0.695047\n",
+      "Hidden Units = 5            0.034       0.212577\n",
+      "Hidden Units = 10           0.000       0.104619\n"
      ]
     }
    ],
@@ -923,17 +875,19 @@
     "trainError_100_layer2 = []\n",
     "testError_100_layer2 =[]\n",
     "index = []\n",
+    "columns = ['Training Error','Testing Error']\n",
+    "\n",
     "\n",
     "# for layer 1\n",
     "layers = 1\n",
     "for units in hidden_units:\n",
     "\n",
-    "        clf1 = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(units,layers), random_state=1)\n",
+    "        clf1 = MLPClassifier( alpha=1e-5,max_iter=10000, hidden_layer_sizes=(units,layers), random_state=1)\n",
     "        clf1.fit(X_train_25, Y_train_25)\n",
     "        trainError_25_layer1.append(1 - clf1.score((X_train_25),(Y_train_25)))\n",
     "        testError_25_layer1.append(1 - clf1.score(X_test,Y_test))\n",
     "        \n",
-    "        clf2 = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(units,layers), random_state=1)\n",
+    "        clf2 = MLPClassifier(alpha=1e-5, max_iter=10000,hidden_layer_sizes=(units,layers), random_state=1)\n",
     "        clf2.fit(X_train_100, Y_train_100)\n",
     "        trainError_100_layer1.append(1 - clf2.score((X_train_100),(Y_train_100)))\n",
     "        testError_100_layer1.append(1 - clf2.score(X_test,Y_test))\n",
@@ -943,12 +897,12 @@
     "layers = 2\n",
     "for units in hidden_units:\n",
     "\n",
-    "        clf1 = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(units,layers), random_state=1)\n",
+    "        clf1 = MLPClassifier(alpha=1e-5, max_iter=10000, hidden_layer_sizes=(units,layers), random_state=1)\n",
     "        clf1.fit(X_train_25, Y_train_25)\n",
     "        trainError_25_layer2.append(1 - clf1.score((X_train_25),(Y_train_25)))\n",
     "        testError_25_layer2.append(1 - clf1.score(X_test,Y_test))\n",
     "        \n",
-    "        clf2 = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(units,layers), random_state=1)\n",
+    "        clf2 = MLPClassifier(alpha=1e-5, max_iter=10000, hidden_layer_sizes=(units,units), random_state=1)\n",
     "        clf2.fit(X_train_100, Y_train_100)\n",
     "        trainError_100_layer2.append(1 - clf2.score((X_train_100),(Y_train_100)))\n",
     "        testError_100_layer2.append(1 - clf2.score(X_test,Y_test))\n",
@@ -965,30 +919,30 @@
     "    Error_list2_25.append([trainError_25_layer2[i],testError_25_layer2[i]])\n",
     "    Error_list2_100.append([trainError_100_layer2[i],testError_100_layer2[i]] )\n",
     "\n",
-    "print(\"--------Printing results of 25 samples with layer 1-----------\")   \n",
+    "print(\"-----Printing results of 25 samples using Multilayer Perceptrons with 1 layer-----\")   \n",
     "df_train_error_25 = pd.DataFrame(Error_list_25,columns=columns,index=index)\n",
     "print(df_train_error_25.head(20))\n",
     "print()\n",
-    "print(\"--------Printing results of 100 samples with layer 1----------\")   \n",
+    "print(\"-----Printing results of 100 samples using Multilayer Perceptrons with 1 layer-----\")   \n",
     "df_train_error_100 = pd.DataFrame(Error_list_100,columns=columns,index=index)\n",
     "print(df_train_error_100.head(20))\n",
     "print()\n",
-    "print(\"--------Printing results of 25 samples with layer 2-----------\")   \n",
+    "print(\"-----Printing results of 25 samples using Multilayer Perceptrons with 2 layers-----\")   \n",
     "df2_train_error_25 = pd.DataFrame(Error_list2_25,columns=columns,index=index)\n",
     "print(df2_train_error_25.head(20))\n",
     "print()\n",
-    "print(\"--------Printing results of 100 samples with layer 2----------\")   \n",
+    "print(\"-----Printing results of 100 samples using Multilayer Perceptrons with 2 layers-----\")   \n",
     "df2_train_error_100 = pd.DataFrame(Error_list2_100,columns=columns,index=index)\n",
     "print(df2_train_error_100.head(20))\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3c2c341f",
+   "id": "a5c0c693",
    "metadata": {},
    "source": [
     "\n",
-    "Q4: Regression for digit completion: regression\n",
+    "Q5: Regression for digit completion: regression\n",
     "Use library sklearn.neural_network.MLPRegressor\n",
     "Using only the data for class 6 and class 9 in X100 for training,  use the first 48 features as inputs and predict the next 16 features,  i.e. create a neural network with 16 outputs. \n",
     "Report the test error (use only the instances from classes 6 and 9).\n",
@@ -999,19 +953,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
-   "id": "a42c7719",
+   "execution_count": null,
+   "id": "3d813e08",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(100, 16)\n",
-      "(100,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# creating given dataset with class 6 and class 9 and 48 features\n",
     "X_class69 = X100_train[X100_train[64] == 6]\n",
@@ -1025,44 +970,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
-   "id": "098ed210",
+   "execution_count": null,
+   "id": "c459a0a2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.026506218374444668\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/anuja/anaconda3/lib/python3.7/site-packages/sklearn/neural_network/_multilayer_perceptron.py:617: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
-      "  % self.max_iter, ConvergenceWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.neural_network import MLPRegressor\n",
     "from sklearn.datasets import make_regression\n",
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "\n",
     "regr = MLPRegressor(random_state=1, max_iter=200).fit(X_class69_48, Y_class69)\n",
-    "# regr.score(X_class69_16, Y_class69)\n",
+    "regr.score(X_class69_16[:,0:1], Y_class69)\n",
     "# for prediction, it should be 16 features but getting error\n",
-    "testing_error = mean_squared_error(Y_class69, regr.predict(X_class69_48))   \n",
+    "# testing_error = mean_squared_error(Y_class69, regr.predict(X_class69_16.iloc[:,0]))   \n",
     "\n",
-    "print(testing_error)\n"
+    "# print(testing_error)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d48acd1b",
+   "id": "a4762d0c",
    "metadata": {},
    "outputs": [],
    "source": []
