--- a/Assignment3/kt6301_HW3.ipynb
+++ b/Assignment3/kt6301_HW3.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 25,
    "id": "217d21c9",
    "metadata": {},
    "outputs": [
@@ -51,57 +51,57 @@
      "output_type": "stream",
      "text": [
       "      0   1   2   3   4   5   6   7   8   9   ...  55  56  57  58  59  60  61  \\\n",
-      "1216   0   0   0   1  16   5   0   0   0   0  ...   0   0   0   0   1  16   9   \n",
-      "1925   0   0  15  15   4   0   0   0   0   0  ...   0   0   1  11  15  12  15   \n",
-      "3270   0   0   1  14   2   0   0   0   0   0  ...   0   0   0   0  13  16  16   \n",
-      "1920   0   0   1  14  15   3   0   0   0   0  ...   0   0   0   2  12  16   5   \n",
-      "696    0   0   9  15  16   8   0   0   0   0  ...   0   0   0  10  12   0   0   \n",
+      "1554   0   0   0   1  15   5   0   0   0   0  ...   0   0   0   0   2  14   3   \n",
+      "2643   0   0   0   9   9   0   0   0   0   0  ...   5   0   0   0   6  11  14   \n",
+      "1377   0   0  14  16  16   8   0   0   0   0  ...   1   0   0  12  16  16  16   \n",
+      "3341   0   0   1  11  14   4   0   0   0   1  ...   0   0   0   1  12  14   9   \n",
+      "1385   0   0  12  16  16  16  11   0   0   0  ...   0   0   0  14  10   0   0   \n",
       "...   ..  ..  ..  ..  ..  ..  ..  ..  ..  ..  ...  ..  ..  ..  ..  ..  ..  ..   \n",
-      "2395   0   0   0   5   9  13  14   6   0   0  ...   0   0   0   0   5  14   0   \n",
-      "2005   0   0   4  12  12   0   0   0   0   2  ...   0   0   0   5  14  16  11   \n",
-      "2750   0   0   2  11  13  11   3   0   0   0  ...   0   0   0   1  14   0   0   \n",
-      "3216   0   0  11  12   7   0   0   0   0   3  ...   0   0   0  10  16  13   8   \n",
+      "2767   0   0   7  16  15   3   0   0   0   0  ...   0   0   0   8  16  15   7   \n",
       "1714   0   0   9  16  11   0   0   0   0   5  ...   0   0   0   5  12  12   6   \n",
+      "3219   0   0   4  13   8   0   0   0   0   0  ...   0   0   0   5  14  16  15   \n",
+      "318    0   0   8  13  16  12   1   0   0   6  ...   0   0   0  10  15   1   0   \n",
+      "1802   0   1  11  16  15   6   0   0   0   2  ...   0   0   0   9  16  16  11   \n",
       "\n",
       "      62  63  64  \n",
-      "1216   0   0   4  \n",
-      "1925  15   4   2  \n",
-      "3270   9   0   6  \n",
-      "1920   0   0   1  \n",
-      "696    0   0   7  \n",
+      "1554   0   0   4  \n",
+      "2643   8   0   6  \n",
+      "1377   9   0   3  \n",
+      "3341   0   0   0  \n",
+      "1385   0   0   7  \n",
       "...   ..  ..  ..  \n",
-      "2395   0   0   9  \n",
-      "2005   2   0   9  \n",
-      "2750   0   0   9  \n",
-      "3216   1   0   9  \n",
+      "2767   0   0   9  \n",
       "1714   0   0   9  \n",
+      "3219   8   0   9  \n",
+      "318    0   0   9  \n",
+      "1802   2   0   9  \n",
       "\n",
       "[250 rows x 65 columns]\n",
       "      0   1   2   3   4   5   6   7   8   9   ...  55  56  57  58  59  60  61  \\\n",
-      "1348   0   0  12  16  16   5   0   0   0   3  ...   0   0   0  13  10   0   0   \n",
-      "1754   0   0   0   0  13   8   0   0   0   0  ...   0   0   0   0   0  15   7   \n",
-      "747    0   0   2  10  15   1   0   0   0   3  ...   0   0   0   0  10  16   6   \n",
-      "360    0   0   1  13   7   0   0   0   0   0  ...   0   0   0   1  12  16  11   \n",
-      "1631   0   0   0  12   7   0   0   0   0   0  ...   0   0   0   0   6  16   2   \n",
+      "1760   0   0   1  12  10   3   0   0   0   0  ...   0   0   0   1   7  12  10   \n",
+      "143    0   6  16  16  15   7   0   0   0   2  ...   0   0   3  16  16  15  11   \n",
+      "1170   0   0   7  14  16  13   1   0   0   9  ...   0   0   0   5  15  16  11   \n",
+      "1113   0   0  11   8   4  13  16   3   0   2  ...   0   0   0  16   7   0   0   \n",
+      "582    0   0   0   9  16   6   0   0   0   0  ...   0   0   0   0   8  16  16   \n",
       "...   ..  ..  ..  ..  ..  ..  ..  ..  ..  ..  ...  ..  ..  ..  ..  ..  ..  ..   \n",
-      "3729   0   0   4  11  12   7   0   0   0   1  ...   0   0   0   1  13  12   5   \n",
-      "3542   0   0  11  16  12   5   0   0   0   4  ...   0   0   0  12  11   0   0   \n",
-      "1497   0   0   4  12  15   6   0   0   0   4  ...   0   0   0   8  16  15  10   \n",
-      "3099   0   0  10  15   9   1   0   0   0   5  ...   0   0   0  10  12  12  15   \n",
-      "1504   0   0   3  13  13   4   0   0   0   1  ...   0   0   0   2  12  16  11   \n",
+      "3735   0   0   6  14  14   4   0   0   0   0  ...   0   0   0   9  12  16  12   \n",
+      "1435   0   0   0   2   9  15   9   0   0   0  ...   0   0   0   0   0  12   6   \n",
+      "1705   0   0   2  15  12   0   0   0   0   0  ...   0   0   0   3  13  15  16   \n",
+      "1798   0   1  14  16  14   4   0   0   0   3  ...   0   0   0  12  14  16  14   \n",
+      "2744   0   0   0   8  13  16   9   0   0   0  ...   0   0   0   0  11   8   0   \n",
       "\n",
       "      62  63  64  \n",
-      "1348   0   0   7  \n",
-      "1754   0   0   4  \n",
-      "747    0   0   0  \n",
-      "360    2   0   6  \n",
-      "1631   0   0   1  \n",
+      "1760   0   0   1  \n",
+      "143    1   0   3  \n",
+      "1170   3   0   3  \n",
+      "1113   0   0   7  \n",
+      "582    7   0   6  \n",
       "...   ..  ..  ..  \n",
-      "3729   0   0   9  \n",
-      "3542   0   0   9  \n",
-      "1497   2   0   9  \n",
-      "3099  11   0   9  \n",
-      "1504   1   0   9  \n",
+      "3735   0   0   9  \n",
+      "1435   0   0   9  \n",
+      "1705   6   0   9  \n",
+      "1798   1   0   9  \n",
+      "2744   0   0   9  \n",
       "\n",
       "[1000 rows x 65 columns]\n"
      ]
@@ -122,6 +122,7 @@
     "\n",
     "classes =10\n",
     "for i in range(1,classes,1):\n",
+    "    #print(i)\n",
     "    Xtrain_25 = Xtrain_25.append(train_data[train_data[64] == i].sample(25))\n",
     "    Xtrain_100 = Xtrain_100.append(train_data[train_data[64] == i].sample(100))\n",
     "\n",
